--- a/TopCard/bin/swt/swl/topcard/view/CreateRQCardView.fxml
+++ b/TopCard/bin/swt/swl/topcard/view/CreateRQCardView.fxml
@@ -5,80 +5,85 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="983.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swt.swl.topcard.controller.CreateRQCardController">
-   <children>
-      <VBox layoutX="20.0" layoutY="58.0" prefHeight="902.0" prefWidth="546.0" spacing="20.0">
+
+<ScrollPane prefHeight="543.0" prefWidth="779.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swt.swl.topcard.controller.CreateRQCardController">
+  <content>
+    <AnchorPane>
          <children>
-            <HBox prefHeight="39.0" prefWidth="410.0" spacing="105.0">
+            <VBox layoutX="9.0" layoutY="-2.0" prefHeight="943.0" prefWidth="980.0" spacing="20.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0">
                <children>
-                  <Label text="Title:" />
-                  <TextField fx:id="titleTextField" layoutX="138.0" layoutY="10.0" />
+                  <Label prefHeight="27.0" prefWidth="257.0" text="Create new Requirement Card: " underline="true" />
+                  <Label prefHeight="27.0" prefWidth="943.0" text="_____________________________________________________________________________________________________________________________" />
+                  <HBox prefHeight="39.0" prefWidth="410.0" spacing="105.0">
+                     <children>
+                        <Label text="Title:" />
+                        <TextField fx:id="titleTextField" layoutX="138.0" layoutY="10.0" />
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="39.0" prefWidth="358.0" spacing="9.0">
+                     <children>
+                        <Label prefHeight="27.0" prefWidth="121.0" text="Modulname:" />
+                        <MenuButton fx:id="modulNameChoiceBox" mnemonicParsing="false" prefHeight="39.0" prefWidth="224.0">
+                          <items>
+                            <MenuItem fx:id="modul1MenuItem" mnemonicParsing="false" text="Modul 1" />
+                            <MenuItem fx:id="modul2MenuItem" mnemonicParsing="false" text="Modul 2" />
+                              <MenuItem fx:id="modul3MenuItem" mnemonicParsing="false" text="Modul .." />
+                              <MenuItem fx:id="modul4MenuItem" mnemonicParsing="false" text="Modul n" />
+                          </items>
+                        </MenuButton>
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="189.0" prefWidth="542.0" spacing="9.0">
+                     <children>
+                        <Label prefHeight="27.0" prefWidth="121.0" text="Description:" />
+                        <TextArea fx:id="descriptionTextArea" layoutX="140.0" layoutY="10.0" prefHeight="189.0" prefWidth="416.0" />
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="118.0" prefWidth="546.0" spacing="40.0">
+                     <children>
+                        <Label prefHeight="27.0" prefWidth="94.0" text="Rationale:" />
+                        <TextArea fx:id="rationaleTextArea" prefHeight="111.0" prefWidth="415.0" />
+                     </children>
+                  </HBox>
+                  <HBox layoutX="10.0" layoutY="319.0" prefHeight="46.0" prefWidth="546.0" spacing="55.0">
+                     <children>
+                        <Label prefHeight="27.0" prefWidth="77.0" text="Source: " />
+                        <TextField fx:id="sourceTextField" />
+                     </children>
+                  </HBox>
+                  <HBox layoutX="10.0" layoutY="475.0" prefHeight="34.0" prefWidth="546.0" spacing="32.0">
+                     <children>
+                        <Label prefHeight="27.0" prefWidth="101.0" text="Userstories:" />
+                        <TextField fx:id="userStoriesTextField" />
+                     </children>
+                  </HBox>
+                  <HBox layoutX="10.0" layoutY="541.0" prefHeight="42.0" prefWidth="546.0" spacing="20.0">
+                     <children>
+                        <Label prefHeight="27.0" prefWidth="115.0" text="Supporting Materials:" />
+                        <TextField fx:id="supportingMaterialsTextField" prefHeight="27.0" prefWidth="183.0" />
+                     </children>
+                  </HBox>
+                  <HBox layoutX="10.0" layoutY="600.0" prefHeight="42.0" prefWidth="546.0" spacing="32.0">
+                     <children>
+                        <Label prefHeight="27.0" prefWidth="107.0" text="Fit criterion:" />
+                        <TextField fx:id="fitCriterionTextField" prefHeight="29.0" prefWidth="221.0" />
+                     </children>
+                  </HBox>
+                  <HBox layoutX="10.0" layoutY="662.0" prefHeight="42.0" prefWidth="546.0" spacing="67.0">
+                     <children>
+                        <Label prefHeight="27.0" prefWidth="72.0" text="Frozen? " />
+                        <CheckBox fx:id="frozenChoiceBox" mnemonicParsing="false" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="BOTTOM_RIGHT" prefHeight="73.0" prefWidth="549.0" spacing="18.0">
+                     <children>
+                        <Button fx:id="closeButton" mnemonicParsing="false" onAction="#closeWindow" prefHeight="69.0" prefWidth="189.0" text="Close without saving" />
+                        <Button fx:id="createButton" mnemonicParsing="false" onAction="#putUpForVote" prefHeight="69.0" prefWidth="149.0" text="Put up for vote" />
+                     </children>
+                  </HBox>
                </children>
-            </HBox>
-            <HBox prefHeight="39.0" prefWidth="358.0" spacing="9.0">
-               <children>
-                  <Label prefHeight="27.0" prefWidth="121.0" text="Modulname:" />
-                  <MenuButton fx:id="modulNameChoiceBox" mnemonicParsing="false" prefHeight="39.0" prefWidth="224.0">
-                    <items>
-                      <MenuItem fx:id="modul1MenuItem" mnemonicParsing="false" text="Modul 1" />
-                      <MenuItem fx:id="modul2MenuItem" mnemonicParsing="false" text="Modul 2" />
-                        <MenuItem fx:id="modul3MenuItem" mnemonicParsing="false" text="Modul .." />
-                        <MenuItem fx:id="modul4MenuItem" mnemonicParsing="false" text="Modul n" />
-                    </items>
-                  </MenuButton>
-               </children>
-            </HBox>
-            <HBox prefHeight="189.0" prefWidth="542.0" spacing="9.0">
-               <children>
-                  <Label prefHeight="27.0" prefWidth="121.0" text="Description:" />
-                  <TextArea fx:id="descriptionTextArea" layoutX="140.0" layoutY="10.0" prefHeight="189.0" prefWidth="416.0" />
-               </children>
-            </HBox>
-            <HBox prefHeight="118.0" prefWidth="546.0" spacing="40.0">
-               <children>
-                  <Label prefHeight="27.0" prefWidth="94.0" text="Rationale:" />
-                  <TextArea fx:id="rationaleTextArea" prefHeight="111.0" prefWidth="415.0" />
-               </children>
-            </HBox>
-            <HBox layoutX="10.0" layoutY="319.0" prefHeight="46.0" prefWidth="546.0" spacing="55.0">
-               <children>
-                  <Label prefHeight="27.0" prefWidth="77.0" text="Source: " />
-                  <TextField fx:id="sourceTextField" />
-               </children>
-            </HBox>
-            <HBox layoutX="10.0" layoutY="475.0" prefHeight="34.0" prefWidth="546.0" spacing="32.0">
-               <children>
-                  <Label prefHeight="27.0" prefWidth="101.0" text="Userstories:" />
-                  <TextField fx:id="userStoriesTextField" />
-               </children>
-            </HBox>
-            <HBox layoutX="10.0" layoutY="541.0" prefHeight="42.0" prefWidth="546.0" spacing="20.0">
-               <children>
-                  <Label prefHeight="27.0" prefWidth="115.0" text="Supporting Materials:" />
-                  <TextField fx:id="supportingMaterialsTextField" prefHeight="27.0" prefWidth="183.0" />
-               </children>
-            </HBox>
-            <HBox layoutX="10.0" layoutY="600.0" prefHeight="42.0" prefWidth="546.0" spacing="32.0">
-               <children>
-                  <Label prefHeight="27.0" prefWidth="107.0" text="Fit criterion:" />
-                  <TextField fx:id="fitCriterionTextField" prefHeight="29.0" prefWidth="221.0" />
-               </children>
-            </HBox>
-            <HBox layoutX="10.0" layoutY="662.0" prefHeight="42.0" prefWidth="546.0" spacing="67.0">
-               <children>
-                  <Label prefHeight="27.0" prefWidth="72.0" text="Frozen? " />
-                  <CheckBox fx:id="frozenChoiceBox" mnemonicParsing="false" />
-               </children>
-            </HBox>
-            <HBox alignment="BOTTOM_RIGHT" prefHeight="73.0" prefWidth="549.0" spacing="18.0">
-               <children>
-                  <Button fx:id="closeButton" mnemonicParsing="false" onAction="#closeWindow" prefHeight="69.0" prefWidth="189.0" text="Close without saving" />
-                  <Button fx:id="createButton" mnemonicParsing="false" onAction="#putUpForVote" prefHeight="69.0" prefWidth="149.0" text="Put up for vote" />
-               </children>
-            </HBox>
+            </VBox>
          </children>
-      </VBox>
-      <Label layoutX="4.0" layoutY="28.0" prefHeight="27.0" prefWidth="943.0" text="_____________________________________________________________________________________________________________________________" />
-      <Label layoutX="14.0" layoutY="14.0" prefHeight="27.0" prefWidth="257.0" text="Create new Requirement Card: " underline="true" />
-   </children>
-</Pane>
+      </AnchorPane>
+  </content>
+</ScrollPane>
