--- a/TopCard/src/swt/swl/topcard/view/EditRqCardView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/EditRqCardView.fxml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="731.0" prefWidth="768.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swt.swl.topcard.controller.EditRqCardController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="832.0" prefWidth="778.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swt.swl.topcard.controller.EditRqCardController">
    <children>
-      <VBox layoutX="20.0" layoutY="58.0" prefHeight="575.0" prefWidth="369.0" spacing="20.0">
+      <VBox layoutX="20.0" layoutY="58.0" prefHeight="738.0" prefWidth="432.0" spacing="20.0">
          <children>
-            <HBox prefHeight="6.0" prefWidth="649.0" spacing="159.0">
+            <HBox prefHeight="6.0" prefWidth="649.0" spacing="155.0">
                <children>
                   <Label text="Title:" />
                   <TextField fx:id="titleTextField" layoutX="138.0" layoutY="10.0" />
                </children>
             </HBox>
-            <HBox prefHeight="34.0" prefWidth="546.0" spacing="85.0">
+            <HBox prefHeight="34.0" prefWidth="546.0" spacing="60.0">
                <children>
                   <Label text="ModuleName(s):" />
-                  <MenuButton fx:id="modulNamesMenuButton" mnemonicParsing="false" prefHeight="28.0" prefWidth="171.0">
+                  <MenuButton fx:id="modulNamesMenuButton" mnemonicParsing="false" prefHeight="39.0" prefWidth="222.0">
                     <items>
                       <MenuItem disable="true" mnemonicParsing="false">
                            <graphic>
@@ -46,16 +47,16 @@
                   <TextField fx:id="ownerTextField" editable="false" />
                </children>
             </HBox>
-            <HBox prefHeight="85.0" prefWidth="649.0" spacing="72.0">
+            <HBox prefHeight="137.0" prefWidth="432.0" spacing="72.0">
                <children>
                   <Label prefHeight="27.0" prefWidth="121.0" text="Description:" />
-                  <TextArea fx:id="descriptionTextArea" layoutX="140.0" layoutY="10.0" prefHeight="85.0" prefWidth="172.0" />
+                  <TextArea fx:id="descriptionTextArea" layoutX="140.0" layoutY="10.0" prefHeight="85.0" prefWidth="223.0" />
                </children>
             </HBox>
-            <HBox prefHeight="94.0" prefWidth="649.0" spacing="34.0">
+            <HBox prefHeight="99.0" prefWidth="432.0" spacing="34.0">
                <children>
                   <Label prefHeight="27.0" prefWidth="159.0" text="Rationale:" />
-                  <TextArea fx:id="rationaleTextArea" prefHeight="90.0" prefWidth="172.0" />
+                  <TextArea fx:id="rationaleTextArea" prefHeight="94.0" prefWidth="225.0" />
                </children>
             </HBox>
             <HBox layoutX="10.0" layoutY="319.0" prefHeight="28.0" prefWidth="649.0" spacing="117.0">
@@ -79,7 +80,7 @@
             <HBox layoutX="10.0" layoutY="600.0" prefHeight="1.0" prefWidth="649.0" spacing="89.0">
                <children>
                   <Label prefHeight="27.0" prefWidth="107.0" text="Fit criterion:" />
-                  <TextField fx:id="fitCriterionTextField" prefHeight="26.0" prefWidth="168.0" />
+                  <TextField fx:id="fitCriterionTextField" prefHeight="39.0" prefWidth="222.0" />
                </children>
             </HBox>
             <HBox layoutX="10.0" layoutY="662.0" prefHeight="1.0" prefWidth="649.0" spacing="125.0">
@@ -90,109 +91,109 @@
             </HBox>
          </children>
       </VBox>
-      <Label layoutX="4.0" layoutY="28.0" prefHeight="27.0" prefWidth="656.0" text="____________________________________________________________________________________________________" />
-      <Label layoutX="14.0" layoutY="14.0" prefHeight="27.0" prefWidth="171.0" text="Edit Requirement Card: " underline="true" />
-      <Label fx:id="createdAtLabel" layoutX="513.0" layoutY="58.0" prefHeight="27.0" prefWidth="210.0" />
-      <Label fx:id="lastModifiedAtLabel" layoutX="532.0" layoutY="91.0" prefHeight="27.0" prefWidth="210.0" />
-      <Label layoutX="419.0" layoutY="91.0" prefHeight="27.0" prefWidth="113.0" text="Last Modified At:" />
-      <Label layoutX="419.0" layoutY="58.0" prefHeight="27.0" prefWidth="101.0" text="Created At : " />
+      <Label layoutX="4.0" layoutY="28.0" prefHeight="27.0" prefWidth="759.0" text="____________________________________________________________________________________________________" />
+      <Label layoutX="14.0" layoutY="14.0" prefHeight="27.0" prefWidth="198.0" text="Edit Requirement Card: " underline="true" />
+      <Label fx:id="createdAtLabel" layoutX="555.0" layoutY="58.0" prefHeight="27.0" prefWidth="210.0" />
+      <Label fx:id="lastModifiedAtLabel" layoutX="597.0" layoutY="91.0" prefHeight="27.0" prefWidth="210.0" />
+      <Label layoutX="452.0" layoutY="91.0" prefHeight="27.0" prefWidth="145.0" text="Last Modified At:" />
+      <Label layoutX="452.0" layoutY="58.0" prefHeight="27.0" prefWidth="101.0" text="Created At : " />
       <Label fx:id="requirementCardNumberLabel" layoutX="280.0" layoutY="15.0" prefHeight="27.0" prefWidth="121.0" />
-      <HBox alignment="BOTTOM_RIGHT" layoutX="329.0" layoutY="644.0" prefHeight="73.0" prefWidth="425.0" spacing="50.0">
+      <HBox alignment="BOTTOM_RIGHT" layoutX="343.0" layoutY="745.0" prefHeight="73.0" prefWidth="425.0" spacing="50.0">
          <children>
             <Button fx:id="closeButton" mnemonicParsing="false" onAction="#closeWindow" prefHeight="70.0" prefWidth="200.0" text="Close without saving" />
             <Button fx:id="editButton" mnemonicParsing="false" onAction="#editButtonClicked" prefHeight="70.0" prefWidth="200.0" text="Save Changes" />
          </children>
       </HBox>
-      <HBox layoutX="419.0" layoutY="15.0" prefHeight="28.0" prefWidth="269.0">
+      <HBox layoutX="419.0" layoutY="15.0" prefHeight="28.0" prefWidth="350.0">
          <children>
-            <Label prefHeight="27.0" prefWidth="103.0" text="MajorVersion:" />
+            <Label prefHeight="27.0" prefWidth="129.0" text="MajorVersion:" />
             <Label fx:id="majorVersionLabel" prefHeight="27.0" prefWidth="30.0" />
-            <Label prefHeight="27.0" prefWidth="107.0" text=", MinorVersion:" />
+            <Label prefHeight="27.0" prefWidth="130.0" text=", MinorVersion:" />
             <Label fx:id="minorVersionLabel" prefHeight="27.0" prefWidth="30.0" />
          </children>
       </HBox>
-      <Pane fx:id="showVoteResultsPane" layoutX="408.0" layoutY="132.0" prefHeight="461.0" prefWidth="210.0" visible="false">
+      <Pane fx:id="showVoteResultsPane" layoutX="449.0" layoutY="145.0" prefHeight="588.0" prefWidth="259.0" visible="false">
          <children>
-            <Label layoutY="29.0" prefHeight="16.0" prefWidth="101.0" text="Vote Results : " underline="true" />
+            <Label layoutY="29.0" prefHeight="27.0" prefWidth="121.0" text="Vote Results : " underline="true" />
             <VBox layoutX="4.0" layoutY="81.0" prefHeight="94.0" prefWidth="261.0">
                <children>
                   <HBox prefHeight="18.0" prefWidth="261.0" spacing="10.0">
                      <children>
-                        <Label prefHeight="16.0" prefWidth="122.0" text="Precise:" />
-                        <Label fx:id="descriptionPreciseVoteResultLabel" prefHeight="16.0" prefWidth="83.0" text="voteResult" />
+                        <Label prefHeight="16.0" prefWidth="130.0" text="Precise:" />
+                        <Label fx:id="descriptionPreciseVoteResultLabel" prefHeight="27.0" prefWidth="102.0" text="voteResult" />
                      </children>
                   </HBox>
                   <HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
                      <children>
-                        <Label prefHeight="16.0" prefWidth="124.0" text="Understandable:" />
-                        <Label fx:id="descriptionUnderstandableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="voteResult" />
+                        <Label prefHeight="16.0" prefWidth="130.0" text="Understandable:" />
+                        <Label fx:id="descriptionUnderstandableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="91.0" text="voteResult" />
                      </children>
                   </HBox>
                   <HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
                      <children>
-                        <Label prefHeight="16.0" prefWidth="124.0" text="Correct:" />
-                        <Label fx:id="descriptionCorrectVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="voteResult" />
+                        <Label prefHeight="16.0" prefWidth="130.0" text="Correct:" />
+                        <Label fx:id="descriptionCorrectVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="94.0" text="voteResult" />
                      </children>
                   </HBox>
                   <HBox layoutX="10.0" layoutY="28.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
                      <children>
-                        <Label prefHeight="16.0" prefWidth="124.0" text="Complete:" />
-                        <Label fx:id="descriptionCompleteVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="voteResult" />
+                        <Label prefHeight="16.0" prefWidth="130.0" text="Complete:" />
+                        <Label fx:id="descriptionCompleteVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="93.0" text="voteResult" />
                      </children>
                   </HBox>
                   <HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
                      <children>
-                        <Label prefHeight="16.0" prefWidth="124.0" text="Atomic:" />
-                        <Label fx:id="descriptionAtomicVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="voteResult" />
+                        <Label prefHeight="16.0" prefWidth="130.0" text="Atomic:" />
+                        <Label fx:id="descriptionAtomicVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="93.0" text="voteResult" />
                      </children>
                   </HBox>
                </children>
             </VBox>
-            <VBox layoutX="4.0" layoutY="186.0" prefHeight="94.0" prefWidth="261.0">
+            <VBox layoutX="4.0" layoutY="253.0" prefHeight="94.0" prefWidth="261.0">
                <children>
                   <HBox prefHeight="18.0" prefWidth="261.0" spacing="10.0">
                      <children>
-                        <Label prefHeight="16.0" prefWidth="124.0" text="Precise:" />
-                        <Label fx:id="rationalePreciseVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="voteResult" />
+                        <Label prefHeight="16.0" prefWidth="130.0" text="Precise:" />
+                        <Label fx:id="rationalePreciseVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="96.0" text="voteResult" />
                      </children>
                   </HBox>
                   <HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
                      <children>
-                        <Label prefHeight="16.0" prefWidth="124.0" text="Understandable:" />
-                        <Label fx:id="rationaleUnderstandableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="voteResult" />
+                        <Label prefHeight="16.0" prefWidth="130.0" text="Understandable:" />
+                        <Label fx:id="rationaleUnderstandableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="99.0" text="voteResult" />
                      </children>
                   </HBox>
                   <HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
                      <children>
-                        <Label prefHeight="16.0" prefWidth="124.0" text="Traceable:" />
-                        <Label fx:id="rationaleTraceableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="voteResult" />
+                        <Label prefHeight="16.0" prefWidth="130.0" text="Traceable:" />
+                        <Label fx:id="rationaleTraceableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="91.0" text="voteResult" />
                      </children>
                   </HBox>
                   <HBox layoutX="10.0" layoutY="28.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
                      <children>
-                        <Label prefHeight="16.0" prefWidth="124.0" text="Complete:" />
-                        <Label fx:id="rationaleCompleteVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="voteResult" />
+                        <Label prefHeight="16.0" prefWidth="130.0" text="Complete:" />
+                        <Label fx:id="rationaleCompleteVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="98.0" text="voteResult" />
                      </children>
                   </HBox>
                   <HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
                      <children>
-                        <Label prefHeight="16.0" prefWidth="124.0" text="Consistent: " />
-                        <Label fx:id="rationaleConsistentVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="16.0" prefWidth="83.0" text="voteResult" />
+                        <Label prefHeight="16.0" prefWidth="130.0" text="Consistent: " />
+                        <Label fx:id="rationaleConsistentVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="99.0" text="voteResult" />
                      </children>
                   </HBox>
                </children>
             </VBox>
-            <HBox layoutX="4.0" layoutY="440.0" prefHeight="18.0" prefWidth="210.0">
+            <Label layoutY="226.0" prefHeight="27.0" prefWidth="259.0" text="___________Rationale___________" />
+            <Label layoutX="4.0" layoutY="58.0" prefHeight="27.0" prefWidth="261.0" text="__________Description __________" />
+            <Label layoutX="5.0" layoutY="514.0" prefHeight="27.0" prefWidth="250.0" text="__________FitCriterion:__________" />
+            <HBox layoutX="4.0" layoutY="547.0" prefHeight="18.0" prefWidth="210.0">
                <children>
-                  <Label prefHeight="16.0" prefWidth="137.0" text="Complete:" />
-                  <Label fx:id="fitCriterionCompleteVoteResultLabel" prefHeight="16.0" prefWidth="92.0" text="voteResult" />
+                  <Label prefHeight="16.0" prefWidth="130.0" text="Complete:" />
+                  <Label fx:id="fitCriterionCompleteVoteResultLabel" prefHeight="27.0" prefWidth="102.0" text="voteResult" />
                </children>
             </HBox>
-            <Label layoutY="167.0" prefHeight="16.0" prefWidth="210.0" text="___________Rationale___________" />
-            <Label layoutX="4.0" layoutY="353.0" prefHeight="16.0" prefWidth="210.0" text="__________FitCriterion:__________" />
-            <Label layoutX="4.0" layoutY="58.0" prefHeight="16.0" prefWidth="210.0" text="__________Description __________" />
          </children>
       </Pane>
-      <Button fx:id="showVoteResultsButton" layoutX="407.0" layoutY="150.0" mnemonicParsing="false" onAction="#showVoteResultsButtonClicked" prefHeight="26.0" prefWidth="151.0" text="Show vote Results: " />
+      <Button fx:id="showVoteResultsButton" layoutX="449.0" layoutY="183.0" mnemonicParsing="false" onAction="#showVoteResultsButtonClicked" prefHeight="39.0" prefWidth="188.0" text="Show vote Results: " />
    </children>
 </Pane>
